--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,25 +1,21 @@
-name: Run Cypress Tests
-on: [push, pull_request]
-jobs:
+name: automate cypress
+on: push
+jobs: 
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Cypress Tests
-        uses: cypress-io/github-action@v6.7.10
+      - name: install dependencies
+        run:  npm install
+      - name: run cypress tests
+        uses: cypress-io/github-action@v6
         with:
-          build: npm run build
-          start: npm start,
-          
+          start: npm start
           wait-on: 'http://localhost:3000'
           runTests: true
+        
